# tasktown_ws

./: lichaoyue.txt  test.txt
install/: local_setup.sh  setup.sh
install/village_interfaces/share/village_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/village_operator/lib/village_operator/: operator_node
install/village_operator/share/village_operator/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/village_task/lib/village_task/: task_node
install/village_task/share/village_task/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/village_taskgroups/lib/village_taskgroups/: taskgroups_node
install/village_taskgroups/share/village_taskgroups/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_list
src/village_interfaces/: CMakeLists.txt  package.xml
src/village_interfaces/action/: task_assign.action
src/village_interfaces/srv/: BorrowMoney.srv
src/village_operator/: CMakeLists.txt
src/village_operator/src/: operator.cpp  operator.txt
src/village_task/: CMakeLists.txt  package.xml
src/village_task/src/: task.cpp  task.txt
src/village_taskgroups/: CMakeLists.txt
src/village_taskgroups/src/: taskgroups.cpp
(+184 files in other folders)
